--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "homepage": "https://github.com/zkmkarlsruhe/NextcloudVideo_Converter#readme",
   "dependencies": {
     "@nextcloud/vue": "^1.2.3"
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.0",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.5"
   }
 }
