--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@nextcloud/vue": "^1.2.3"
   },
   "devDependencies": {
+    "@bundle-analyzer/webpack-plugin": "^0.5.1",
     "css-loader": "^3.4.0",
+    "stylelint-webpack-plugin": "^1.1.2",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.5"
+    "webpack": "^4.41.5",
+    "webpack-merge": "^4.2.2"
   }
 }
