Updated the package.json, so that the license matches the project

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "converter"
   ],
   "author": "GityUpNow",
-  "license": "MIT",
+  "license": "agpl-3.0",
   "bugs": {
     "url": "https://github.com/zkmkarlsruhe/NextcloudVideo_Converter/issues"
   },
